# EcmFormOutliner

./: .gitignore  README.md  setup.cfg  template.docx
reference/: Lunch form outline - for reference.docx
src/app/: control_parsers.py  form_outliner.py  form_parser.py  main.py  simple.py  util.py
src/models/: __init__.py  controls.py  form_elements.py
src/models/form/: __init__.py  page.py  repeatable_group.py  rule.py  section.py  subsection.py  table.py
src/models/form/control/: __init__.py  base_control.py
tests/: Lunch planning_1.json  Lunch planning_1.yaml  Lunch planning_2.json  test_docx_format.py  test_hello_add.py  test_lunch_form_parse.py  test_parse_controls.py  test_parser.py  test_parsing.py
tests/unit/: test_jsonpath.py  test_parser.py
