[metadata]
name = ecm_form_outliner
version = 0.1.0
author = Jack Deeth
description = Creates .docx outline of ECLIPSE Case Management form .json files
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir = 
    = src
python_requires = >= 3.7
#install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    ecm_form_outliner=app.form_outliner:main

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    hypothesis
    pylint
    black
    
[tool:pytest]
xfail_strict = true
requests_mock_case_sensitive = true
addopts =
    --cov=ecmapi
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress
