[metadata]
name = ecm_form_outliner
version = 0.1.0
author = Jack Deeth
description = Creates .docx outline of ECLIPSE Case Management form .json files
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir = 
    = src
python_requires = >= 3.7
install_requires =
    python-docx

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    outline=app.main:main

[options.extras_require]
dev =
    black
    coverage
    hypothesis
    pylint
    pytest
    pytest-cov
    pytest-mock
    
[tool:pytest]
xfail_strict = true
python_functions = test_* should_*
addopts =
    --cov=src
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress

[pylint]
recursive = yes
enable =
    useless-suppression
ignore =
    venv,
    build,
    .*

[pylint.'MESSAGES CONTROL']
disable =
    missing-module-docstring,
    use-dict-literal,
    use-list-literal
